Update code to work with CSV format as of 2024-10-31

--- a/DKB-Kontoauszug-Visualizer.ipynb
+++ b/DKB-Kontoauszug-Visualizer.ipynb
@@ -11,6 +11,7 @@
     "import pandas as pd\n",
     "import csv\n",
     "from datetime import datetime\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
@@ -38,10 +39,10 @@
    },
    "outputs": [],
    "source": [
-    "accountname = 'mein-name' # set filename of the csv\n",
+    "accountname = 'export' # set filename of the csv. e.g. \n",
     "\n",
     "# 0 or less means analyse all months\n",
-    "number_of_last_months_to_analyse = 4"
+    "number_of_last_months_to_analyse = 0 # 4"
    ]
   },
   {
@@ -49,7 +50,7 @@
    "metadata": {},
    "source": [
     "### Read csv\n",
-    "Works for DKB csv as of 2022-12-31."
+    "Works for DKB csv as of 2024-10-31."
    ]
   },
   {
@@ -64,10 +65,12 @@
    "outputs": [],
    "source": [
     "csv_file= accountname+\".csv\"\n",
-    "headerSize = 6\n",
-    "data = pd.read_csv(csv_file, index_col='Buchungstag',\n",
-    "                   header=headerSize, sep=';', quoting=1, parse_dates=True,\n",
-    "                   encoding='latin-1', dayfirst=True)"
+    "data = pd.read_csv(csv_file, index_col=\"Buchungsdatum\",\n",
+    "                   header='infer', sep=';', quoting=1,\n",
+    "                   parse_dates=True, date_format=\"%Y-%m-%d\",\n",
+    "                   skiprows = 4, # ignore metadata which doesn't fit CSV rows format\n",
+    "                   keep_default_na=False, # don't make empty values to become NaN\n",
+    "                   encoding='utf-8', dayfirst=True)"
    ]
   },
   {
@@ -82,35 +85,20 @@
    "outputs": [],
    "source": [
     "# Read metadata\n",
-    "with open(csv_file,\"r\",encoding=\"latin-1\") as f:\n",
-    "    reader = csv.DictReader(f,delimiter=\";\")\n",
+    "data = data.iloc[::-1] # reverse rows such that bookings are chronologically sorted\n",
+    "\n",
+    "with open(csv_file,\"r\",encoding=\"utf-8\") as f:\n",
+    "    reader = csv.reader(f,delimiter=\";\")\n",
     "    metadata = {}\n",
     "    for i, row in enumerate(reader):\n",
-    "        if i < 3:\n",
-    "            key = None\n",
-    "            value = None\n",
-    "            for k, v in row.items():\n",
-    "                if k == \"Kontonummer:\":\n",
-    "                    key = row[\"Kontonummer:\"]\n",
-    "                    continue\n",
-    "                if k == \"\":\n",
-    "                    continue\n",
-    "                value = v\n",
-    "            \n",
-    "            if \":\" in key:\n",
-    "                key = key.replace(\":\",\"\")\n",
-    "            if \"Kontostand\" in key:\n",
-    "                key = \"Kontostand\"\n",
-    "            if \"EUR\" in value:\n",
-    "                value = value.replace(\" \",\"\").replace(\"EUR\",\"\")\n",
+    "        if \"Kontostand\" in row[0]:\n",
+    "            value = row[1]\n",
+    "            value = value.replace(\".\",\"\").replace(\",\",\".\")[:-2] # '12.345,67\\xa0€' -> '12345.67'\n",
+    "            end_balance = float(value)\n",
+    "            break\n",
     "\n",
-    "            metadata[key] = value\n",
-    "            \n",
-    "# print(metadata)\n",
-    "\n",
-    "start_date = datetime.strptime(metadata[\"Von\"],\"%d.%m.%Y\").date()\n",
-    "end_date = datetime.strptime(metadata[\"Bis\"],\"%d.%m.%Y\").date()\n",
-    "end_balance = float(metadata[\"Kontostand\"].replace(\".\",\"\").replace(\",\",\".\"))"
+    "start_date = datetime.strptime( data.index[0] ,\"%d.%m.%y\").date()\n",
+    "end_date = datetime.strptime( data.index[-1] ,\"%d.%m.%y\").date()"
    ]
   },
   {
@@ -139,11 +127,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "party = \"Auftraggeber / Begünstigter\"\n",
+    "party = \"Sender => Receiver\"\n",
+    "sender = \"Zahlungspflichtige*r\"\n",
+    "receiver = \"Zahlungsempfänger*in\"\n",
     "category = \"Kategorie\"\n",
-    "amount = \"Betrag (EUR)\"\n",
+    "amount = \"Betrag (€)\"\n",
     "cause = \"Verwendungszweck\"\n",
-    "posting_text = \"Buchungstext\"\n",
     "balance = \"Kontostand (EUR)\""
    ]
   },
@@ -168,12 +157,7 @@
     "# Fix US / EU decimal-point/comma\n",
     "data[amount] = data[amount].str.replace('.','')\n",
     "data[amount] = data[amount].str.replace(',','.')\n",
-    "data[amount] = data[amount].astype('float')\n",
-    "\n",
-    "# avoid nan being interpreted as float in specific columns\n",
-    "data[party] = data[party].astype(str)\n",
-    "data[cause] = data[cause].astype(str)\n",
-    "data[posting_text] = data[posting_text].astype(str)"
+    "data[amount] = data[amount].astype('float')"
    ]
   },
   {
@@ -220,12 +204,27 @@
    "outputs": [],
    "source": [
     "from dateutil.relativedelta import relativedelta\n",
+    "\n",
     "if number_of_last_months_to_analyse > 0:\n",
     "    start_date = end_date - relativedelta(months=number_of_last_months_to_analyse)\n",
-    "    \n",
+    "\n",
+    "# start_date may be not in the index, if there was no booking on that day. in that case, chose the next day which has any booking\n",
+    "if str(start_date) not in data.index:\n",
+    "    for dt_str in data.index:\n",
+    "        dt = datetime.strptime( dt_str ,\"%d.%m.%y\").date()\n",
+    "        if dt < start_date:\n",
+    "            continue\n",
+    "        start_date = dt\n",
+    "        print(\"using new start date\", start_date, \"which is in the index.\")\n",
+    "        break\n",
+    "\n",
+    "def dt2str(dt):\n",
+    "    return dt.strftime(\"%d.%m.%y\")\n",
+    "\n",
     "print(f\"Analysing time range: {start_date} -> {end_date}\")\n",
-    "data = data.loc[str(start_date):str(end_date)]\n",
-    "data = data.iloc[::-1]"
+    "data = data.loc[dt2str(start_date):dt2str(end_date)]\n",
+    "\n",
+    "start_and_end_dates_string = \"(%i.%i.%i - %i.%i.%i)\" % (start_date.day, start_date.month, start_date.year, end_date.day, end_date.month, end_date.year)"
    ]
   },
   {
@@ -313,30 +312,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "empfgroup = data.groupby(party).agg({amount:\"sum\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Short the names\n",
-    "empfgroup.index = [str(i)[:30] for i in empfgroup.index]"
+    "data[party] = data[sender] + \" => \" + data[receiver]\n",
+    "tx_party_group = data.groupby(party).agg({amount:\"sum\"})"
    ]
   },
   {
@@ -345,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "empfgroup[amount].head()"
+    "tx_party_group = tx_party_group.sort_values(amount, ascending=False)"
    ]
   },
   {
@@ -354,9 +334,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "empfgroup = empfgroup.sort_values(amount,ascending=False)\n",
-    "gutschrift = empfgroup[amount] > 0\n",
-    "colors = list( map(lambda x: \"g\" if x else \"r\" , gutschrift) )"
+    "shortened_party_length = 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shorten name\n",
+    "tx_party_group.index = [ \"=>\".join(map(lambda s: s[:shortened_party_length],str(idx).split(\"=>\"))) for idx in tx_party_group.index ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tx_party_group[amount].head()"
    ]
   },
   {
@@ -367,9 +364,9 @@
    },
    "outputs": [],
    "source": [
-    "empfgroup[empfgroup[amount].abs() > 50].plot.barh(\n",
+    "tx_party_group[tx_party_group[amount].abs() > 50].plot.barh(\n",
     "    figsize=(10,60),\n",
-    "    title=u'Aggregierte Zahlungen ab 50€ (%i.%i.%i - %i.%i.%i)' % (fr.day, fr.month, fr.year, to.day, to.month, to.year)\n",
+    "    title=u'Aggregierte Zahlungen ab 50€ %s' % start_and_end_dates_string\n",
     "  );"
    ]
   },
@@ -513,7 +510,6 @@
     "def mapToCategory(x):\n",
     "    # use these transaction details to map to a category\n",
     "    p = x[party].lower()\n",
-    "    pt = x[posting_text].lower()\n",
     "    c = x[cause].lower()\n",
     "    \n",
     "    # manual mappings\n",
@@ -528,7 +524,7 @@
     "    \n",
     "    # mappings by category\n",
     "    for cat, cat_words in categories.items():\n",
-    "        if any(map(lambda r: r.lower() in p, cat_words)) or any(map(lambda r: r.lower() in pt, cat_words)):\n",
+    "        if any(map(lambda r: r.lower() in p, cat_words)):\n",
     "            return cat\n",
     "    \n",
     "    # debitcard. may need adaptation\n",
@@ -587,7 +583,7 @@
     "    y=amount,\n",
     "    legend=None,\n",
     "    autopct=lambda x: str(round(x/100*total_costs)) + \"€ | \" + str(round(x)) + \"%\",\n",
-    "    title=u'Nach Kategorie Aggregierte Kosten (%i.%i.%i - %i.%i.%i)' % (fr.day, fr.month, fr.year, to.day, to.month, to.year)\n",
+    "    title=u'Nach Kategorie Aggregierte Kosten %s' % start_and_end_dates_string\n",
     ")\n",
     "plt.show()\n",
     "\n",
@@ -595,7 +591,7 @@
     "    figsize=(12,12),\n",
     "    y=amount,\n",
     "    legend=None,\n",
-    "    title=u'Nach Kategorie Aggregiertes Einkommen (%i.%i.%i - %i.%i.%i)' % (fr.day, fr.month, fr.year, to.day, to.month, to.year)\n",
+    "    title=u'Nach Kategorie Aggregiertes Einkommen %s' % start_and_end_dates_string\n",
     ")\n",
     "plt.show()\n",
     "\n",
@@ -603,7 +599,7 @@
     "byCategory.plot.barh(\n",
     "    figsize=(6,40),\n",
     "    grid=True,\n",
-    "    title=u'Nach Kategorie Aggregierte Zahlungen (%i.%i.%i - %i.%i.%i)' % (fr.day, fr.month, fr.year, to.day, to.month, to.year)\n",
+    "    title=u'Nach Kategorie Aggregierte Zahlungen %s' % start_and_end_dates_string\n",
     ")\n",
     "plt.show()\n"
    ]
@@ -679,13 +675,20 @@
    "source": [
     "quick_category_analyse(\"transport\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -697,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
